# champ

./: .gitmodules  README.md
anymal_b_config/: CMakeLists.txt  champ_teleop.py  package.xml
anymal_b_config/config/: gait.yaml  joints.yaml
anymal_b_config/launch/: bringup.launch  bringup.launch.py
anymal_b_config/urdf/: anymal_b.urdf
champ/: CMakeLists.txt  package.xml
champ_base/: CMakeLists.txt  package.xml
champ_base/src/: quadruped_controller.cpp
champ_config/launch/: bringup.launch  gazebo.launch
champ_gazebo/: CMakeLists.txt
champ_msgs/: CMakeLists.txt  package.xml
