<?xml version="1.0"?>
<package format="3">
  <name>anymal_b_config</name>
  <version>0.1.0</version>
  <description>CHAMP base launch files</description>

  <maintainer email="jimenojmm@gmail.com">Juan Miguel Jimeno</maintainer>
  <author>Juan Miguel Jimeno</author>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>launch_ros</build_depend>
  
  <exec_depend>champ_base</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
